second project presentation

--- a/project-two/src/assets/sass/custom.scss
+++ b/project-two/src/assets/sass/custom.scss
@@ -1,12 +1,14 @@
 // custom.scss
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss'; 
 
-$primary-color: #F6F9FD;
-$secondary-color: #E5EDF5;
+
+
 $bg-danger: #FF4B63;
-$secondary-color: #E5EDF5;
+
 $text-danger:#FF4B63;
 $btn-danger-hover-bg: #FF4B63;
 $btn-outline-danger: #FF4B63;
 $btn-danger-hover-border: #FF4B63;
 $btn-danger-hover-color:#FF4B63;
+
+$h1-font-size:5rem;
