--- a/sass-class/src/sass/_variables.scss
+++ b/sass-class/src/sass/_variables.scss
@@ -1,5 +1,9 @@
-$backgroundColor: burlywood;
-$titleColor: crimson;
-$TextColorOne: darkorchid;
-$TextColortwo: green;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,700;0,800;0,900;1,100;1,500&display=swap');
 
+$BackgroundColor: #FBF5F1;
+$FontFamily: 'Montserrat', sans-serif;
+$TitleColor: #3C6B59;
+$TextColorOne: #995F55;
+$TextColortwo: #F0E44F;
+$PrimaryColor: #E9C6BF;
+$SecondaryColor: #B1E1D1;
