--- a/sass-class/src/sass/styles.scss
+++ b/sass-class/src/sass/styles.scss
@@ -1,15 +1,29 @@
 @use 'sections';
 @import 'variables';
+@import 'mixin';
+
 
 body{
-    background-color: $backgroundColor;
+    background-color: $BackgroundColor;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    font-family: $FontFamily;
+    @include justifiedColumn;
 
     header{
-        color: $titleColor;
+        color: $TitleColor;
         width: 100%;
-        h1{
-            font-style: italic;
+        h1{           
             text-align: center;
+            font-weight: 900;
+            font-style: bold;
+            font-size: 3rem;
         }
     }
+    h3 {
+        font-weight: 600;
+    }
 }
+
+
