--- a/kata-pokemon/style.css
+++ b/kata-pokemon/style.css
@@ -35,6 +35,7 @@ h1 {
   margin: 10px;
   padding: 20px;
   text-align: center;
+  transition: transform 0.3s;
 }
 
 .pokemon .img-container {
@@ -64,4 +65,9 @@ h1 {
 .pokemon .info .name {
   margin: 15px 0 7px;
   letter-spacing: 1px;
+}
+
+.pokemon:hover{
+  transform: scale(1.1);
+  cursor: pointer;
 }
